# threshold

./: .dockerignore  .gitignore  NOTICE  README.adoc  SECURITY.md  Taskfile.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.woodpecker/: auth-gateway.yml  events.yml  media.yml  python-quality.yml  release.yml  social.yml  users.yml  web.yml
.woodpecker/scripts/: bump-service-gitops.py  woodpecker-build-push.sh  woodpecker-promote-gitops.sh
apps/web/: .dockerignore  .env.example  Dockerfile  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
apps/web/messages/: en.json  pl.json
apps/web/src/: auth.ts  proxy.test.ts  proxy.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/i18n/: actions.ts  global.d.ts  locale.test.ts  locale.ts  request.ts
apps/web/src/lib/: cities.ts  format.ts  notification-preferences.ts  notifications.ts  page-types.ts  profile-href.ts  safe-href.ts  validation.ts
ci/woodpecker/: woodpecker-build-push.sh  woodpecker-promote-gitops.sh
libs/proto/: buf.gen.yaml
libs/py/: otel_nats.py  pyproject.toml
libs/py/tests/: test_http_observability.py  test_logging.py  test_otel_nats.py  test_telemetry.py
libs/py/threshold_common/: __init__.py  api_security.py  auth.py  config.py  health.py  http_observability.py  logging.py  media_client.py  nats.py  otel_nats.py  pagination.py  rate_limit.py  telemetry.py
services/auth-gateway/: Dockerfile  alembic.ini  pyproject.toml
services/auth-gateway/src/auth_gateway/: __init__.py  main.py  settings.py  users_client.py
services/auth-gateway/tests/: conftest.py
services/auth-gateway/tests/integration/: test_health.py
services/auth-gateway/tests/unit/: test_settings.py  test_users_client.py
services/events/: Dockerfile  pyproject.toml
services/events/migrations/: env.py
services/events/migrations/versions/: 0001_create_events_schema.py  0002_location_mode_public_location.py  0003_event_updates.py  0004_guestlist_qr.py  0005_event_door_staff.py  0006_one_issued_check_in_token.py  0007_feed_candidate_indexes.py  0008_account_erasure_tombstones.py
services/events/src/events/: erasure_write_fence.py  main.py  main_dependencies.py  media_client.py  settings.py  social_client.py  users_client.py
services/events/tests/: conftest.py
services/events/tests/integration/: test_account_erasure.py  test_account_erasure_tombstone_migration.py  test_api.py  test_door_staff.py  test_erasure_write_fence.py  test_event_door_staff_migration.py  test_feed_candidate_indexes_migration.py  test_feed_candidates.py  test_one_issued_token_migration.py  test_qr_concurrency.py
services/media/: Dockerfile  pyproject.toml
services/media/migrations/: env.py
services/media/migrations/versions/: 0001_create_media_schema.py  0002_erasure_tombstones.py
services/media/src/media/: images.py  main.py  main_dependencies.py  migrate.py  settings.py  storage.py  uploads.py
services/media/src/media/api/: routes.py  schemas.py  security.py
services/media/src/media/db/: readiness.py
services/media/src/media/domain/: models.py
services/media/tests/: conftest.py
services/media/tests/integration/: test_account_erasure.py  test_api.py
services/media/tests/unit/: test_images.py
services/social/: Dockerfile  pyproject.toml
services/social/migrations/: env.py
services/social/migrations/versions/: 0001_create_social_schema.py  0002_add_post_mentions.py  0003_social_interactions_v2.py  0004_edited_at.py  0005_post_media_assets.py  0006_report_block.py  (+7 more)
services/social/tests/: conftest.py  test_erasure.py
services/users/: Dockerfile  alembic.ini  pyproject.toml
services/users/migrations/: env.py
services/users/migrations/versions/: 0001_create_users_schema.py  0002_secret_location_privacy.py  0003_product_auth.py  0004_add_slice2_models.py  0005_profile_avatar.py  0006_page_avatar.py  0007_add_onboarding_skipped.py  0008_page_notifications.py  0009_report_block.py  0010_safety_audit_log.py  0011_notification_inbox.py  0012_notification_preferences.py  0013_page_residencies.py  0014_account_erasure_jobs.py
services/users/src/users/: __init__.py  account_erasure.py  events.py  events_client.py  main.py  main_dependencies.py  media_client.py  migrate.py  nats_server.py  settings.py  social_client.py
services/users/src/users/api/: routes.py  schemas.py
services/users/src/users/auth/: hashing.py  service.py  tokens.py
services/users/src/users/db/: base.py
services/users/src/users/domain/: follows.py  models.py  profiles.py  secret_locations.py
services/users/tests/: conftest.py
services/users/tests/integration/: test_account_erasure_jobs.py  test_active_user_refs.py  test_api.py  test_artist_refs.py  test_me_endpoints.py  test_organizer_refs.py  test_product_auth.py  test_profile_avatar.py  test_public_endpoints.py
services/users/tests/unit/: test_email_delivery.py  test_nats_server.py  test_profiles.py  test_secret_location_privacy.py  test_smtp_settings.py
(+251 files in other folders)
