[project]
name = "threshold-common"
version = "0.1.0"
description = "Shared non-domain helpers for Threshold services"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.124",
  "httpx>=0.28",
  "opentelemetry-api>=1.42.1",
  "opentelemetry-exporter-otlp>=1.42.1",
  "opentelemetry-exporter-otlp-proto-http>=1.42.1",
  "opentelemetry-instrumentation-fastapi>=0.63b1",
  "opentelemetry-instrumentation-httpx>=0.63b1",
  "opentelemetry-instrumentation-logging>=0.63b1",
  "opentelemetry-sdk>=1.42.1",
  "pydantic-settings>=2.8",
  "structlog>=25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["threshold_common"]
