[project]
name = "threshold-auth-gateway"
version = "0.1.0"
description = "Threshold auth gateway service"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.124",
  "httpx>=0.28",
  "nats-py>=2.12",
  "opentelemetry-api>=1.42.1",
  "opentelemetry-distro>=0.63b1",
  "opentelemetry-exporter-otlp>=1.42.1",
  "opentelemetry-instrumentation-fastapi>=0.63b1",
  "opentelemetry-instrumentation-httpx>=0.63b1",
  "opentelemetry-instrumentation-logging>=0.63b1",
  "pyjwt[crypto]>=2.10",
  "threshold-common",
  "uvicorn[standard]>=0.38",
]

[tool.uv.sources]
threshold-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auth_gateway"]
