[project]
name = "threshold-media"
version = "0.1.0"
description = "Threshold media service"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.17",
  "asyncpg>=0.30",
  "boto3>=1.42",
  "fastapi>=0.124",
  "httpx>=0.28",
  "opentelemetry-api>=1.42.1",
  "opentelemetry-distro>=0.63b1",
  "opentelemetry-exporter-otlp>=1.42.1",
  "opentelemetry-instrumentation-asyncpg>=0.63b1",
  "opentelemetry-instrumentation-fastapi>=0.63b1",
  "opentelemetry-instrumentation-httpx>=0.63b1",
  "opentelemetry-instrumentation-logging>=0.63b1",
  "opentelemetry-instrumentation-psycopg>=0.63b1",
  "pillow>=12.0",
  "psycopg[binary]>=3.2",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0",
  "threshold-common",
  "uvicorn[standard]>=0.38",
]

[tool.uv.sources]
threshold-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/media"]
