[project]
name = "threshold-users"
version = "0.1.0"
description = "Threshold users service"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.17",
  "argon2-cffi>=25.1.0",
  "asyncpg>=0.30",
  "fastapi>=0.124",
  "httpx>=0.28",
  "nats-py>=2.12",
  "opentelemetry-api>=1.42.1",
  "opentelemetry-distro>=0.63b1",
  "opentelemetry-exporter-otlp>=1.42.1",
  "opentelemetry-instrumentation-asyncpg>=0.63b1",
  "opentelemetry-instrumentation-fastapi>=0.63b1",
  "opentelemetry-instrumentation-httpx>=0.63b1",
  "opentelemetry-instrumentation-logging>=0.63b1",
  "opentelemetry-instrumentation-psycopg>=0.63b1",
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
  "threshold-common",
  "uvicorn[standard]>=0.38",
]

[tool.uv.sources]
threshold-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/users"]
